--- a/public/survey.html
+++ b/public/survey.html
@@ -8,6 +8,7 @@
   <!-- <link rel="stylesheet" type="text/css" href="assets/css/styleportfolio.css"> -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/style1.css">
 
   <!--Website Browser Title-->
   <Title>Survey</Title>
@@ -17,14 +18,14 @@
 <body>
   <div class="container">
     <div class="jumbotron">
-      <h1 class="display-4">Survey Page!</h1>
+      <h1 class="display-4">Survey Page</h1>
       <hr class="my-4">
       <p>Please answer the personal assesment questions below so that we may find the best match!</p>
 
     </div>
     <form>
       <div class="form-group">
-        <h2>What is your name</h2>
+        <h2>What is your name?</h2>
         <input id="name" type="text">
       </div>
       <div class="form-group">
@@ -32,7 +33,7 @@
         <input id="photo" type="text">
       </div>
       <div class="form-group">
-        <h2>How Old Are YOu?</h2>
+        <h2>How old are you?</h2>
         <input id="age" type="text">
       </div>
       <div class="form-group">
@@ -154,7 +155,6 @@
           $('#q5').val('')
 
       })
-
     })
 
 
